# eoq-4

./: README.md  calc_kcals.py  main.py  pyproject.toml  simple_board_printer.py  test.py
Python/: WaterRowerConnection.py  WaterRowerConnector.py
__MACOSX/: ._Python  ._README.md
__MACOSX/Python/: ._WaterRowerConnector.py
eoq-files/: README.md  V3 hardware vs software int 1.3.docx
eoq-files/Python/: WaterRowerConnection.py
eoq-files/__MACOSX/: ._V3 hardware vs software int 1.3.docx
eoq-files/__MACOSX/Python/: ._WaterRowerConnection.py
